[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/OpenType-TT/UT Shadigo Trial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/ComputerUI.gd" type="Script" id=2]
[ext_resource path="res://Audio/select.wav" type="AudioStream" id=3]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.305882, 0.203922, 0.180392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.427451, 0.298039, 0.254902, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 1 )

[node name="ComputerUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 70.0
margin_bottom = 30.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_right = 150.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.878431, 0.509804, 1 )
text = "Door is locked"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -195.5
margin_right = 300.0
margin_bottom = 195.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 132.0
margin_right = 600.0
margin_bottom = 187.0
custom_styles/separator = SubResource( 3 )
custom_constants/separation = 55

[node name="FirstButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 191.0
margin_right = 600.0
margin_bottom = 211.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.878431, 0.509804, 1 )
text = "Unlock First Door"
flat = true

[node name="SecondButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 215.0
margin_right = 600.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.878431, 0.509804, 1 )
text = "Unlock Second Door"
flat = true

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 239.0
margin_right = 600.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.878431, 0.509804, 1 )
text = "Exit"
flat = true

[node name="ChoiceSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
